* Down from 2827 to 2751. It's harder to save space now... I won't save much if I don't disable more features, like ARIA, so I need a bit of reading on this. Changing .size() to .length is faster (no function call overhead), and compresses better. The optionFormat simplification saves a lot. optgroup handling wasted a local var. Also, flickerDisplay doesn't need its own function as it's called only once (plus, I couldn't see any issues in IE7 even when disabled.) And a newly created option tag doesn't need a default empty value because that's what it gets anyway. (sbox.js) * Menu arrows were off by a pixel. (index.css)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -514,7 +514,7 @@ input[type=file]
 		background-image: none
 	h4:hover, h4.hove
 		background-color: #5a6c85
-		background-position: 98% -27px
+		background-position: 98% -26px
 
 .menu li a
 	display: block
@@ -526,7 +526,7 @@ input[type=file]
 
 .menu h4 extends .arrows
 	float: left
-	background-position: 98% 3px
+	background-position: 98% 4px
 	padding: 3px 19px 3px 6px
 	font-weight: normal
 	margin-right: 2px
@@ -580,12 +580,12 @@ input[type=file]
 
 .css h4:hover, h4.hove
 	background-color: rgba(0,0,0, .075)
-	background-position: 98% 3px
+	background-position: 98% 4px
 	color: #000
 
 .menu .chosen h4
 	background-color: #3fa6c3
-	background-position: 98% -27px
+	background-position: 98% -26px
 	font-weight: 700
 	color: #fff
 	a
